<resources>
    <string name="app_name">Vida+ Agenda Médica</string>
    <string name="titulo_inicio">Vida+</string>
    <string name="sub_inicio">Tu salud, a un toque de distancia</string>
    <string name="bienvenida">Bienvenido</string>
    <string name="texto_sesion">Inicia sesion para continuar</string>
    <string name="ingresando">Ingresando..</string>
    <string name="ingreso">Ingresar</string>
    <string name="correo">Correo electronico</string>
    <string name="help_correo">Ingresa tu correo electronico</string>
    <string name="Contra">Contraseña</string>
    <string name="Contra2">Confirmar contraseña</string>
    <string name="help_contra">Ingresa tu contraseña</string>
    <string name="help_contra2">Ingresa nuevamente tu contraseña</string>
    <string name="Olvido_contra">¿Olvidaste tu contraseña?</string>
    <string name="crear_cuenta">Crear cuenta nueva</string>
    <string name="siguiente">Siguiente</string>
    <string name="Informacion">Informacion personal</string>
    <string name="Informacion2">Credenciales</string>
    <string name="Informacion3">Identificacion</string>
    <string name="Paso1">Paso 1 de 3: Datos de identificacion basica</string>
    <string name="Paso2">Paso 2 de 3: Credenciales de acceso</string>
    <string name="Paso3">Paso 3 de 3: Identificacion y confirmacion</string>
    <string name="nombre">Nombre completo</string>
    <string name="Fecha">Fecha de nacimiento</string>
    <string name="Sexo">Sexo</string>
    <string name="Tel">Telefono</string>
    <string name="direccion">Direccion</string>
    <string name="direccion_hint">Calle, Numero, Colonia...</string>
    <string name="help_direccion">Ingresa tu dirreccion</string>
    <string name="curp">Curp</string>
    <string name="help_curp">18 caracteres: 4 letras, 6 números (AAMMDD), H/M, 5 letras de estado y 2 dígitos finales</string>
    <string name="NSS">NSS (opcional)</string>
    <string name="help_NSS">Ingresa tu NSS (opcional)</string>
    <string name="recuperar_contra">Recuperar Contraseña</string>
    <string name="recuperar_contra2">Verificar codigo</string>
    <string name="recuperar_contra3">Nueva contraseña</string>
    <string name="Paso1_recuperar">Paso 1 de 3: Ingrese su correo registrado</string>
    <string name="Paso2_recuperar">Paso 2 de 3: Revise el correo, se envio un codigo de 6 digitos</string>
    <string name="Paso3_recuperar">Paso 3 de 3: Ingrese su nueva contraseña</string>
    <string name="help_recuperar">Ingrese el codigo de 6 digitos</string>
    <string name="recuperar">Codigo</string>
    <string name="nueva_contra">Nueva contraseña</string>
    <string name="help_nuevacontra">Ingrese su nueva contraseña</string>
    <string name="agendar">Agendar cita</string>
    <string name="Ver_perfil">Ver perfil</string>
    <string name="Detalles">Detalles</string>
    <string name="proxima_cita">Proxima cita</string>
    <string name="bienvenida_home">Bienvenido de nuevo</string>
    <string name="recomendaciones">Recomendaciones a tu dia a dia</string>
    <string name="hola">Hola</string>
    <string name="info_consulta">Informacion de su consulta</string>
    <string name="txt_fecha">Fecha: </string>
    <string name="txt_hora">Hora: </string>
    <string name="txt_diagnostico">Diagnostico</string>
    <string name="txt_tratamiento">Tratamiento</string>
    <string name="txt_notas">Notas adicionales</string>
    <string name="info_doctor">Informacion del Medico</string>
    <string name="nombre_txt">Nombre</string>
    <string name="Especialidades_txt">Especialidades</string>
    <string name="Cedula_txt">Cedula profesional</string>
    <string name="Correo_txt">Correo Electronico</string>
    <string name="Telefono_txt">Telefono</string>
    <string name="search_doctores">Buscar doctor o especialidad</string>
    <string name="nodoctores">No se encontraron doctores</string>
    <string name="search_consultas">Buscar por Doctor</string>
    <string name="noconsultas">No hay consultas por mostrar</string>
    <string name="txt_nocitasproximas">No hay una cita proxima por ahora, Recuerda agendar una cita desde el apartado citas</string>
    <string name="card_health_title">Cuida tu salud</string>
    <string name="card_health_desc">Realiza tu chequeo anual preventivo</string>
    <string name="card_hydration_title">Mantente hidratado</string>
    <string name="card_hydration_desc">Toma al menos 2 litros de agua al dia</string>
    <string name="card_sleep_title">Duerme bien</string>
    <string name="card_sleep_desc">7-8 horas de sueño mejoran tu salud</string>
    <string name="ver_detalle">Ver detalle</string>
    <string name="inicio">Inicio</string>
    <string name="citas">Citas</string>
    <string name="doctores">Doctores</string>
    <string name="historial">Historial</string>
    <string name="perfil">Perfil</string>
</resources>