<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/inicio" />

    <item
        android:id="@+id/nav_citas"
        android:icon="@drawable/baseline_calendar_month_24"
        android:title="@string/citas" />
    <item
       android:id="@+id/nav_doctores"
        android:icon="@drawable/baseline_medical_services_24"
        android:title="@string/doctores">
    </item>
    <item
        android:id="@+id/nav_historial"
        android:icon="@drawable/baseline_receipt_long_24"
        android:title="@string/historial">
    </item>
    <item
        android:id="@+id/nav_perfil"
        android:icon="@drawable/baseline_person_outline_24"
        android:title="@string/perfil"></item>
</menu>