<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Recuperar">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:background="@color/background2"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingLeft="20dp">
            <ImageView
                android:id="@+id/btn_atras"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_arrow_back_24"></ImageView>
            <TextView
                android:paddingLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></TextView>
        </LinearLayout>
        <ViewFlipper
            android:id="@+id/viewflipper_recuperar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="80">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="top"
                android:padding="20dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_circle_active"
                        android:paddingRight="5dp"></ImageView>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_circle_inactive"
                        android:paddingRight="5dp"></ImageView>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_circle_inactive"></ImageView>
                </LinearLayout>
                <TextView
                    android:paddingTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/recuperar_contra"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textColor="@color/black"></TextView>
                <TextView
                    android:paddingTop="5dp"
                    android:layout_gravity="left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Paso1_recuperar"
                    android:paddingBottom="15dp"></TextView>
                <com.google.android.material.textfield.TextInputLayout
                    android:paddingBottom="15dp"
                    android:layout_gravity="left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/correo"
                    android:textColorHint="@color/inputs"
                    app:helperTextEnabled="true"
                    app:helperText="@string/help_correo"
                    app:helperTextTextColor="@color/inputs"
                    app:endIconTint="@color/inputs"
                    app:startIconTint="@color/inputs"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/baseline_email_24">
                    <com.google.android.material.textfield.TextInputEditText
                        android:textColor="@color/inputs"
                        android:id="@+id/recuperar_correo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textEmailAddress">
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="top"
                android:padding="20dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_circle_inactive"
                        android:paddingRight="5dp"></ImageView>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_circle_active"
                        android:paddingRight="5dp"></ImageView>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_circle_inactive"></ImageView>
                </LinearLayout>
                <TextView
                    android:paddingTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/recuperar_contra2"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textColor="@color/black"></TextView>
                <TextView
                    android:paddingTop="5dp"
                    android:layout_gravity="left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Paso2_recuperar"
                    android:paddingBottom="15dp"></TextView>
                <com.google.android.material.textfield.TextInputLayout
                    android:paddingBottom="15dp"
                    android:layout_gravity="left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/recuperar"
                    android:textColorHint="@color/inputs"
                    app:helperTextEnabled="true"
                    app:helperText="@string/help_recuperar"
                    app:helperTextTextColor="@color/inputs"
                    app:endIconTint="@color/inputs"
                    app:startIconTint="@color/inputs"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/baseline_key_24">
                    <com.google.android.material.textfield.TextInputEditText
                        android:textColor="@color/inputs"
                        android:id="@+id/registro_codigo"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:maxLength="6">
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="top"
                android:padding="20dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_circle_inactive"
                        android:paddingRight="5dp"></ImageView>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_circle_inactive"
                        android:paddingRight="5dp"></ImageView>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_circle_active"></ImageView>
                </LinearLayout>
                <TextView
                    android:paddingTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/recuperar_contra3"
                    android:textStyle="bold"
                    android:textSize="20dp"
                    android:textColor="@color/black"></TextView>
                <TextView
                    android:paddingTop="5dp"
                    android:layout_gravity="left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Paso3_recuperar"
                    android:paddingBottom="15dp"></TextView>
                <com.google.android.material.textfield.TextInputLayout
                    android:paddingBottom="15dp"
                    android:layout_gravity="left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/inputs"
                    android:hint="@string/nueva_contra"
                    app:helperTextEnabled="true"
                    app:helperText="@string/help_nuevacontra"
                    app:helperTextTextColor="@color/inputs"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/inputs"
                    app:startIconTint="@color/inputs"
                    app:startIconDrawable="@drawable/baseline_lock_24">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/recuperar_contra"
                        android:textColor="@color/inputs"
                        android:inputType="textPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:paddingBottom="15dp"
                    android:layout_gravity="left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Contra2"
                    android:textColorHint="@color/inputs"
                    app:helperTextEnabled="true"
                    app:helperText="@string/help_contra2"
                    app:helperTextTextColor="@color/inputs"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/inputs"
                    app:startIconTint="@color/inputs"
                    app:startIconDrawable="@drawable/baseline_lock_24">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/recuperar_contra2"
                        android:textColor="@color/inputs"
                        android:inputType="textPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </ViewFlipper>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:background="@color/background2"
            android:gravity="center"
            android:padding="10dp">
            <androidx.cardview.widget.CardView
                android:id="@+id/btn_siguiente"
                android:focusable="true"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:cardBackgroundColor="@color/primary"
                app:cardCornerRadius="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/txt_boton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/siguiente"
                        android:textColor="@color/white"></TextView>
                    <ImageView
                        android:paddingLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_arrow_forward_24"></ImageView>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>