<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Registro">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:background="@color/background2"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingLeft="20dp">
            <ImageView
                android:id="@+id/btn_atras"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_arrow_back_24"></ImageView>
            <TextView
                android:paddingLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crear_cuenta"
                android:textColor="@color/primary_dark"></TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="80"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:padding="20dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_circle_active"
                    android:paddingRight="5dp"></ImageView>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_circle_inactive"
                    android:paddingRight="5dp"></ImageView>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_circle_inactive"></ImageView>
            </LinearLayout>
            <TextView
                android:paddingTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/Informacion"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="@color/black"></TextView>
            <TextView
                android:paddingTop="5dp"
                android:layout_gravity="left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Paso1"
                android:paddingBottom="15dp"></TextView>
            <com.google.android.material.textfield.TextInputLayout
                android:paddingBottom="15dp"
                android:layout_gravity="left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"
                android:inputType="text"
                app:helperTextEnabled="true"
                app:helperText="@string/nombre"
                app:helperTextTextColor="@color/black"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/baseline_person_outline_24">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registro_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <Spinner
                android:id="@+id/spn_fecha"
                android:paddingBottom="15dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"></Spinner>
            <Spinner
                android:id="@+id/spn_sexo"
                android:paddingBottom="15dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"></Spinner>
            <com.google.android.material.textfield.TextInputLayout
                android:paddingBottom="15dp"
                android:layout_gravity="left"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="+52 000 000 0000"
                android:inputType="number"
                app:helperTextEnabled="true"
                app:helperText="@string/Tel"
                app:helperTextTextColor="@color/black"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/baseline_phone_24">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registro_telefono"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_gravity="left"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:hint="@string/direccion_hint"
                android:inputType="text"
                app:helperTextEnabled="true"
                app:helperText="@string/direccion"
                app:helperTextTextColor="@color/black"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/baseline_location_on_24">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registro_direccion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:background="@color/background2"
            android:gravity="center"
            android:padding="10dp">
            <androidx.cardview.widget.CardView
                android:id="@+id/btn_siguiente"
                android:focusable="true"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:cardBackgroundColor="@color/primary"
                app:cardCornerRadius="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/siguiente"
                        android:textColor="@color/white"></TextView>
                    <ImageView
                        android:paddingLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_arrow_forward_24"></ImageView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>